--- a/templates/criteria.html
+++ b/templates/criteria.html
@@ -5,16 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Select Category</title>
-    <link rel="stylesheet" href="">
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+
 </head>
 
 <body>
     <div>
         <h1>Select Category</h1>
-        <input type="text" placeholder="Enter your email" id="emailId">
+        <input type="email" placeholder="Enter your email" id="emailId" required>
         <div class="options">
             <label for="category">Select an option:</label>
             <select id="category">
+                <option value="">--Select--</option>
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -22,10 +24,10 @@
                 <option value="5">5</option>
             </select>
         </div>
-        <button onclick="sendEmail()">Send Mail</button>
+        <button id="sendButton">Send Mail</button>
     </div>
-    <script src="https://smtpjs.com/v3/smtp.js"></script>
-    <script src="../controllers/criteria.js"></script>
+
+    <script type="module" src="../controllers/criteria.js"></script>
 </body>
 
 </html>
