added dynamic variables

--- a/templates/criteria.html
+++ b/templates/criteria.html
@@ -17,11 +17,11 @@
             <label for="category">Select an option:</label>
             <select id="category">
                 <option value="">--Select--</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
+                <option value="a">1</option>
+                <option value="b">2</option>
+                <option value="c">3</option>
+                <option value="d">4</option>
+                <option value="e">5</option>
             </select>
         </div>
         <button id="sendButton">Send Mail</button>
