--- a/templates/criteria.html
+++ b/templates/criteria.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Select Category</title>
+    <link rel="icon" href="/icon.png" type="image/png">
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <link rel="stylesheet" href="../styles/criteria.css">
 
 </head>
 
 <body>
-    <div>
+    <div class="box">
         <h1>Select Category</h1>
         <input type="email" placeholder="Enter your email" id="emailId" required>
         <div class="options">
